objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Accessories_Fitted__c</fullName>
        <label>Accessories Fitted</label>
        <picklist>
            <picklistValues>
                <fullName>Seat Cover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear Camera</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Body_Style__c</fullName>
        <label>Body Style</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chassis_Number__c</fullName>
        <label>Chassis Number</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-Road</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_First_Registered_in_NZ__c</fullName>
        <label>Date First Registered in NZ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engine_Number__c</fullName>
        <label>Engine Number</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Size__c</fullName>
        <label>Engine Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fuel_Type__c</fullName>
        <label>Fuel Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Photo_Id__c</fullName>
        <label>Full Photo Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Photo__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; +  Full_Photo_Id__c , &quot;Model Image&quot;, 300,300)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generation__c</fullName>
        <label>Generation</label>
        <picklist>
            <picklistValues>
                <fullName>First Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fifth Owner</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Information_Source__c</fullName>
        <label>Information Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Number_Codes__c</fullName>
        <label>Key Number Codes</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Point_Date__c</fullName>
        <label>Last Touch Point Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Point_From__c</fullName>
        <label>Last Touch Point From</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing_Contacts</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model_Code__c</fullName>
        <label>Model Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Variant_Group_Name__c</fullName>
        <label>Model Variant Group Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Variant_Name__c</fullName>
        <label>Model Variant Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Doors__c</fullName>
        <label>Number of Doors</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Gears__c</fullName>
        <label>Number of Gears</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Seats__c</fullName>
        <label>Number of Seats</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Odometer_Reading_Date__c</fullName>
        <label>Odometer Reading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Odometer_Readings__c</fullName>
        <label>Odometer Readings</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <label>Options</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SubCode__c</fullName>
        <label>Product Sub Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavily Used</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_Active_Plate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registration Active Plate</label>
        <referenceTo>Plate__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Plate_Date_Assigned__c</fullName>
        <label>Registration Plate Date Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Plate_Number_Text__c</fullName>
        <description>This field is to make the vehicle record searchable on the basis of Registration plate number.</description>
        <label>Registration Plate Number Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Plate_Number__c</fullName>
        <formula>Registration_Active_Plate__r.Registration_Plate_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Plate Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Plate_Status__c</fullName>
        <formula>text(Registration_Active_Plate__r.Registration_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Plate Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scratch Built</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TMC_Codes__c</fullName>
        <label>TMC Codes</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transmission__c</fullName>
        <label>Transmission</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>17</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VMS_GUID__c</fullName>
        <label>VMS GUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Colours__c</fullName>
        <label>Vehicle Colours</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <label>Vehicle Make</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Vehicle Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOF_Expiry_Date__c</fullName>
        <label>WOF Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_Made__c</fullName>
        <label>Year Made</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thumbId__c</fullName>
        <description>id for thumbnail picture</description>
        <label>thumbId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thumbnail__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; +  thumbId__c , &quot;Thumbnail Image&quot;, 100,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thumbnail</label>
        <type>Text</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Year_Made__c</columns>
        <columns>Vehicle_Make__c</columns>
        <columns>Vehicle_Model__c</columns>
        <columns>Model_Variant_Group_Name__c</columns>
        <columns>Registration_Plate_Number__c</columns>
        <columns>Odometer_Readings__c</columns>
        <columns>Marketing_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Conquest</fullName>
        <columns>NAME</columns>
        <columns>Year_Made__c</columns>
        <columns>Vehicle_Make__c</columns>
        <columns>Vehicle_Model__c</columns>
        <columns>Model_Variant_Group_Name__c</columns>
        <columns>Registration_Plate_Number__c</columns>
        <columns>Odometer_Readings__c</columns>
        <columns>Marketing_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vehicle_Make__c</field>
            <operation>notEqual</operation>
            <value>Toyota</value>
        </filters>
        <filters>
            <field>Vehicle_Make__c</field>
            <operation>notEqual</operation>
            <value>Daihatsu</value>
        </filters>
        <filters>
            <field>Vehicle_Make__c</field>
            <operation>notEqual</operation>
            <value>Lexus</value>
        </filters>
        <label>Conquest</label>
    </listViews>
    <listViews>
        <fullName>Toyotas</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Year_Made__c</columns>
        <columns>Vehicle_Make__c</columns>
        <columns>Vehicle_Model__c</columns>
        <columns>Model_Variant_Group_Name__c</columns>
        <columns>Registration_Plate_Number__c</columns>
        <columns>Odometer_Readings__c</columns>
        <columns>Marketing_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vehicle_Make__c</field>
            <operation>equals</operation>
            <value>Toyota</value>
        </filters>
        <filters>
            <field>Vehicle_Make__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Vehicle_Make__c</field>
            <operation>equals</operation>
            <value>Daihatsu</value>
        </filters>
        <label>Toyotas</label>
    </listViews>
    <nameField>
        <displayFormat>V-{000000}</displayFormat>
        <label>Vehicle Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>